Refactor: findFaqDto -> FindFaqResponse